# elaina

./: .gitignore  .gitmodules  CITATION.bib  CMakeLists.txt  README.md  exec.cu  exec.h  main.cpp
core/: common.h  config.h  evaluation_grid.h  file.cpp  file.h  interop.cpp  interop.h  logger.cpp  logger.h  problem.cu  problem.h  sampler.h  taggedptr.h  texture.cu  texture.h
core/device/: atomic.h  buffer.h  context.cpp  context.h  cuda.h  memory.h
core/math/: CMakeLists.txt  README.md
core/math/include/krrmath/: aabb.h  array.h  common.h  complex.h  constants.h  functors.h  math.h  matrix.h  quaternion.h  vector.h
data/fille/: gt.json  n.json  u.json
data/ladybug/: gt.json  n.json  u.json
ext/: CMakeLists.txt
ext/image/: tinyexr.h
integrator/: common.h
integrator/guided/: distribution.h  guided.h  guided2d_workitem.soa  guided3d_workitem.soa  guideditem.h  integrator.cu  integrator.h  parameters.h  train.h
integrator/uniform/: integrator.cu  integrator.h  uniform2d_workitem.soa  uniform3d_workitem.soa  workitem.h  workqueue.h
test/: CMakeLists.txt  beta_test.cu  common.h  distribution_test.cu  test_main.cpp  vonmises_test.cu
util/: beta.h  check.h  convert.h  ema.h  film.h  green.h  hash.h  image.cpp  image.h  math_utils.h  network.h  sampling.h  soac.cpp  tonemapping.cuh  transformation.h  vmf.h  vonmises.h
