# Assimp
# SET(BUILD_SHARED_LIBS OFF)
# SET(ASSIMP_BUILD_TESTS OFF)
# SET(ASSIMP_BUILD_ZLIB ON)
# SET(ASSIMP_NO_EXPORT ON)
# SET(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
# # specify enabled importers for speed
# SET(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF)
# SET(ASSIMP_BUILD_OBJ_IMPORTER ON)
# SET(ASSIMP_BUILD_FBX_IMPORTER ON)
# SET(ASSIMP_BUILD_GLTF_IMPORTER ON)
# ADD_SUBDIRECTORY(assimp EXCLUDE_FROM_ALL)
# INCLUDE_DIRECTORIES(assimp/include)
# SET(ASSIMP_INCLUDE_DIRS 
# 	${CMAKE_CURRENT_SOURCE_DIR}/assimp/include 
# 	${CMAKE_CURRENT_BINARY_DIR}/assimp/include	
# 	PARENT_SCOPE)

SET(IMAGEIO_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/image
	# ${CMAKE_CURRENT_SOURCE_DIR}/assimp/contrib/zlib
	# ${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/zlib
    PARENT_SCOPE
)
INCLUDE_DIRECTORIES(${IMAGEIO_INCLUDE_DIRS})

add_subdirectory(eigen)
set(EIGEN_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/eigen
	PARENT_SCOPE
)

set(JSON_BuildTests OFF CACHE INTERNAL "")
add_subdirectory(json)
set(JSON_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/json/single_include
	PARENT_SCOPE
)

set(CATCH_BUILD_TESTING OFF CACHE BOOL "Disable Catch testing" FORCE)
add_subdirectory(Catch2)

set(TCNN_BUILD_BENCHMARK OFF)
set(TCNN_BUILD_EXAMPLES OFF)
add_subdirectory(tcnn)
set(TCNN_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/tcnn/include
	${CMAKE_CURRENT_SOURCE_DIR}/tcnn/dependencies
	PARENT_SCOPE
)

# fcpw
# set(FCPW_ENABLE_GPU_SUPPORT ON)
# set(FCPW_USE_ENOKI OFF)
# add_subdirectory(fcpw)
# set(FCPW_ENOKI_INCLUDES "${FCPW_ENOKI_INCLUDES}" PARENT_SCOPE)
# set(FCPW_SLANG_INCLUDES "${FCPW_SLANG_INCLUDES}" PARENT_SCOPE)
# set(FCPW_EIGEN_INCLUDES "${FCPW_EIGEN_INCLUDES}" PARENT_SCOPE)

# indicators
set(INDICATORS_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/indicators/single_include/indicators
	PARENT_SCOPE
)

# lbvh
set(LBVH_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/lbvh/include
	PARENT_SCOPE
)

# magic_enum
set(MAGIC_ENUM_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/magic_enum/include
	PARENT_SCOPE
)

# openvdb
set(USE_NANOVDB ON)
set(USE_BLOSC OFF)
add_subdirectory(openvdb)
set(OPENVDB_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/openvdb/openvdb
	PARENT_SCOPE
)
set(OPENVDB_LIBRARIES
	openvdb
	PARENT_SCOPE
)
set(NANOVDB_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/openvdb/nanovdb
	PARENT_SCOPE
)
set(NANOVDB_LIBRARIES
	nanovdb
	PARENT_SCOPE
)
